--- a/src/scss/frontend/drupal/modules/_styleguide.scss
+++ b/src/scss/frontend/drupal/modules/_styleguide.scss
@@ -2,6 +2,7 @@
 //
 // Contains default <a href="https://www.drupal.org/project/styleguide" target="_blank">Style Guide module</a> styles. To add/edit component variables, use <code>scss/_variables.scss</code>.
 //
+// $styleguide-layout            - If enabled, styles the styleguide page layout within a container. Default: <code>true</code>
 // $styleguide-header-background - Defines the style guide header background. Default: <code>$light-gray</code>
 // $styleguide-header-border     - Defines the style guide header border. Default: <code>rem-calc(1) solid $medium-gray</code>
 // $styleguide-header-color      - Defines the style guide header color. Default: <code>$dark-gray</code>
@@ -9,6 +10,7 @@
 //
 // Style guide: frontend.drupal.modules.styleguide
 
+$styleguide-layout:            true;
 $styleguide-header-background: $light-gray;
 $styleguide-header-border:     rem-calc(1) solid $medium-gray;
 $styleguide-header-color:      $dark-gray;
@@ -31,6 +33,15 @@ $styleguide-header-padding:    $global-padding;
 
     .type {
       width: 50%;
+    }
+  }
+}
+
+@if $styleguide-layout == true {
+  // scss-lint:disable QualifyingElement
+  body.page-admin-appearance-styleguide {
+    #main {
+      @extend %container;
     }
   }
 }
