--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -51,7 +51,7 @@
 @import 'frontend/functions';
 @import 'frontend/mixins';
 @import 'frontend/extendables';
-@import 'frontend/common';
+//@import 'frontend/common';
 
 // Drupal
 //
@@ -61,7 +61,7 @@
 //
 // Style guide: frontend.drupal
 
-@import 'frontend/drupal/drupal7';
+//@import 'frontend/drupal/drupal7';
 
 // Drupal Modules
 //
@@ -69,7 +69,7 @@
 //
 // Style guide: frontend.drupal.modules
 
-@import 'frontend/drupal/modules/styleguide';
+//@import 'frontend/drupal/modules/styleguide';
 
 // Drupal Page Themes
 //
@@ -79,7 +79,7 @@
 //
 // Style guide: frontend.drupal.page-themes
 
-@import 'frontend/drupal/page-themes/user-1';
+//@import 'frontend/drupal/page-themes/user-1';
 
 // WordPress
 //
