--- a/src/scss/framework/foundation/_framework.scss
+++ b/src/scss/framework/foundation/_framework.scss
@@ -10,56 +10,56 @@
 // Configuration
 @import 'settings';
 
+// Import Foundation dependency
+@import 'foundation';
+
 // Frontend Build variables. Important this is placed here for overrides to work properly.
 @import '../../frontend/variables';
 
 // Custom variables. Important this is placed here for overrides to work properly.
 @import '../../variables';
 
-// Import Foundation dependency
-@import 'foundation';
-
 // Import ALL Foundation components (not recommended)
 //@include foundation-everything;
 
 // Import Foundation components individually
 @include foundation-global-styles;
-@include foundation-xy-grid-classes;
+//@include foundation-xy-grid-classes;
 //@include foundation-grid;                // DEPRECATED
 //@include foundation-flex-grid;           // DEPRECATED
-@include foundation-flex-classes;
-@include foundation-typography;
-@include foundation-forms;
-@include foundation-button;
-@include foundation-accordion;
-@include foundation-accordion-menu;
-@include foundation-badge;
-@include foundation-breadcrumbs;
-@include foundation-button-group;
-@include foundation-callout;
-@include foundation-card;
-@include foundation-close-button;
-@include foundation-menu;
-@include foundation-menu-icon;
-@include foundation-drilldown-menu;
-@include foundation-dropdown;
-@include foundation-dropdown-menu;
-@include foundation-responsive-embed;
-@include foundation-label;
-@include foundation-media-object;
-@include foundation-off-canvas;
-@include foundation-orbit;
-@include foundation-pagination;
+//@include foundation-flex-classes;
+//@include foundation-typography;
+//@include foundation-forms;
+//@include foundation-button;
+//@include foundation-accordion;
+//@include foundation-accordion-menu;
+//@include foundation-badge;
+//@include foundation-breadcrumbs;
+//@include foundation-button-group;
+//@include foundation-callout;
+//@include foundation-card;
+//@include foundation-close-button;
+//@include foundation-menu;
+//@include foundation-menu-icon;
+//@include foundation-drilldown-menu;
+//@include foundation-dropdown;
+//@include foundation-dropdown-menu;
+//@include foundation-responsive-embed;
+//@include foundation-label;
+//@include foundation-media-object;
+//@include foundation-off-canvas;
+//@include foundation-orbit;
+//@include foundation-pagination;
 //@include foundation-progress-bar;        // NOT COMPATIABLE WITH DRUPAL 7 STYLES
-@include foundation-slider;
-@include foundation-sticky;
-@include foundation-reveal;
-@include foundation-switch;
-@include foundation-table;
-@include foundation-tabs;
-@include foundation-thumbnail;
-@include foundation-title-bar;
-@include foundation-tooltip;
-@include foundation-top-bar;
-@include foundation-visibility-classes;
-@include foundation-float-classes;
+//@include foundation-slider;
+//@include foundation-sticky;
+//@include foundation-reveal;
+//@include foundation-switch;
+//@include foundation-table;
+//@include foundation-tabs;
+//@include foundation-thumbnail;
+//@include foundation-title-bar;
+//@include foundation-tooltip;
+//@include foundation-top-bar;
+//@include foundation-visibility-classes;
+//@include foundation-float-classes;
