--- a/src/scss/frontend/_mixins.scss
+++ b/src/scss/frontend/_mixins.scss
@@ -101,41 +101,28 @@
   transform: translateY(-50%) translateX(-50%);
   width: $width;
 
-  @-webkit-keyframes throbber-rotateplane {
-    0% { -webkit-transform: perspective(120px) }
-    50% { -webkit-transform: perspective(120px) rotateY(180deg) }
-    100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
-  }
-
   @keyframes throbber-rotateplane {
     0% {
       transform: perspective(120px) rotateX(0deg) rotateY(0deg);
-      -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
-    } 50% {
-      transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
-      -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
-    } 100% {
-      transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-      -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
     }
-  }
 
-  @-webkit-keyframes throbber-scaleout {
-    0% { -webkit-transform: scale(0) }
+    50% {
+      transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+    }
+
     100% {
-      -webkit-transform: scale(1.0);
-      opacity: 0;
+      transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
     }
   }
 
   @keyframes throbber-scaleout {
     0% {
-      -webkit-transform: scale(0);
       transform: scale(0);
-    } 100% {
-      -webkit-transform: scale(1.0);
-      transform: scale(1.0);
+    }
+
+    100% {
       opacity: 0;
+      transform: scale(1);
     }
   }
 }
