--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -10,7 +10,7 @@
 // <br>
 // See <a href="https://docs.google.com/spreadsheets/d/1-IEPnlD4zbl2XG7qD5h8SuXVf8WKTRoX5JC6hOM5jTs/edit?usp=sharing" target="_blank">https://docs.google.com/spreadsheets/d/1-IEPnlD4zbl2XG7qD5h8SuXVf8WKTRoX5JC6hOM5jTs/edit?usp=sharing</a>.
 //
-// Weight: -1
+// Weight: 0
 //
 // Style guide: cheatsheet
 
@@ -61,33 +61,13 @@
 //
 // Style guide: frontend.drupal
 
-@import 'frontend/drupal/drupal7';
-
-// Drupal Modules
-//
-// Weight: 5
-//
-// Style guide: frontend.drupal.modules
-
-@import 'frontend/drupal/modules/styleguide';
-@import 'frontend/drupal/modules/panels';
-@import 'frontend/drupal/modules/panels-in-place-editor';
-
-// Frontend Build Drupal Components
-//
-// Frontend Build optional components for default Drupal output.
-//
-// Weight: 6
-//
-// Style guide: frontend.drupal.components
-
-@import 'frontend/drupal/components/admin-menu-1';
-@import 'frontend/drupal/components/modal-1';
-@import 'frontend/drupal/components/user-1';
+//@import 'frontend/drupal/drupal';
 
 // WordPress
 //
-// Weight: 7
+// Optional styles if your application is using <a href="https://wordpress.org/" target="_blank">WordPress</a>.
+//
+// Weight: 5
 //
 // Style guide: frontend.wordpress
 
@@ -100,7 +80,7 @@
 // all styles should be self-contained components that follow a specific
 // naming convention. Once built, you can import your components here.
 //
-// Weight: 8
+// Weight: 6
 //
 // Style guide: components
 
